next.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.app: "semver: >= 1.0.0-test.0, <2.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
      - name: nextjs
        image: docker.io/stiforr/awesome-ac:1.0.3-test.9 # {"$imagepolicy": "flux-system:nextjs"}
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: 3000
            path: /
          initialDelaySeconds: 30
          periodSeconds: 10
