next.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: next.stiforr.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextjs-service
            port:
              number: 3000
